TAG: lib_py_cluster-tr12069-BP
DATE: 11/21/2016
STAFF: sc
CHANGES: Branch Point Tag

TAG: lib_py_cluster-6-0-6-1
DATE: 10/5/2016
STAFF: dbm
CHANGES:
1) Install: remove files from lib/python before copying new ones

TAG: lib_py_cluster-6-0-5-1
DATE: 07/19/2016
STAFF: sc
CHANGES:
1) clusterlib.py - updated for postgres
2) removed hard coded sybase server/database settings 

TAG: lib_py_cluster-3-5-2-1
DATE: 11/29/2006
STAFF: lec
CHANGES:
1) Create indexes on temp table for faster performance

TAG: lib_py_cluster-3-5-0-2
DATE: 8/15/2006
STAFF: dbm
CHANGES:
1) Pick up Install script change

TAG: lib_py_cluster-3-5-0-1
DATE: 05/01/2006
STAFF: dbm
CHANGES:
1) Merge configuration changes from tr6549 branch

TAG: lib_py_cluster-tr6594-1
DATE: 3/27/2006
STAFF: dbm
CHANGES: Initial tag for TR6594 testing

TAG: lib_py_cluster-tr6594-BP
DATE: 3/16/2006
STAFF: dbm
CHANGES: Branch point tag for configuration changes

TAG: lib_py_cluster-3-4-2-0
DATE: 01/12/2006
STAFF: jsb
RELEASE: beta
CHANGES:
1) merged tr7193 branch to trunk

TAG: lib_py_cluster-tr7193-1
DATE: 12/27/2005
STAFF: dbm
RELEASE: Prime-time
CHANGES:
1) Python 2.4.2 upgrade fixes.

TAG: lib_py_cluster-tr7193-BP
DATE: 12/27/2005
STAFF: dbm
RELEASE: Prime-time
CHANGES:
1) Branch point tag for Python 2.4.2 upgrade.

TAG: lib_py_cluster-1-0-2
DATE: 08/02/2004
STAFF: lec
RELEASE: Prime-time
CHANGES:
1) missing system_docs in 1-0-1 tag.


TAG: lib_py_cluster-1-0-0
DATE: 10/02/2002
STAFF: dbm
RELEASE: Prime-time
CHANGES:
1) Initial version to have a HISTORY file.  This is our baseline.

TAG: lib_py_cluster-1-0-1
DATE: 12/05/2002
STAFF: dbm
RELEASE: Prime-time
CHANGES:
1) Modified the query for the 0:1 and 1:0 buckets so they do not contain
   cluster IDs that are in the other buckets.