@@ -1,3 +1,13 @@
+TAG: lib_py_cluster-6-0-7-1
+DATE: 12/09/2016
+STAFF: sc
+CHANGES: merge tr12069 branch to trunk
+
+TAG: lib_py_cluster-tr12069-1
+DATE: 11/21/2016
+STAFF: sc
+CHANGES: clusterlib.py - remove setAutoTranslate*
+
 TAG: lib_py_cluster-tr12069-BP
 DATE: 11/21/2016
 STAFF: sc
